[package]
name = "cch23-woelfman"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.21.5"
chrono = "0.4.31"
handlebars = "4.5.0"
image = "0.24.7"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-axum = { version = "0.35.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.0"
thiserror = "1.0.50"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["serde"] }
uuid = "1.6.1"
