[package]
name = "cch23-woelfman"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.21.5"
chrono = "0.4.31"
futures-util = "0.3.29"
handlebars = "4.5.0"
image = "0.24.7"
itertools = "0.12.0"
modql = { version = "0.3.4", features = ["with-sea-query"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
sea-query = "0.30.4"
sea-query-binder = { version = "0.5.0", features = ["sqlx-postgres"] }
serde = "1.0.193"
serde_json = "1.0.108"
sha256 = { version = "1.4.0", default-features = false }
shuttle-axum = { version = "0.35.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.0"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
thiserror = "1.0.50"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["serde"] }
unic = "0.9.0"
uuid = "1.6.1"
