[package]
name = "cch23-woelfman"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.22"
chrono = "0.4.31"
dms-coordinates = "1.3.0"
futures-util = "0.3.29"
handlebars = "6"
image = "0.25.0"
itertools = "0.13.0"
modql = { version = "0.4", features = ["with-sea-query"] }
petgraph = "0.6.4"
postage = "0.5.0"
regex = "1.10.2"
reqwest = { version = "0.12", features = ["json"] }
reverse_geocoder = "4.0.0"
rust_iso3166 = "0.1.11"
s2 = "0.0.13"
sea-query = "0.32.0"
sea-query-binder = { version = "0.7.0-rc.2", features = ["sqlx-postgres"] }
serde = "1.0.193"
serde_json = "1.0.108"
sha256 = { version = "1.4.0", default-features = false }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tar = "0.4.40"
tempfile = "3.8.1"
thiserror = "2"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["serde"] }
unic = "0.9.0"
uuid = "1.6.1"

[dev-dependencies]
axum-test = "16"
tower = { version = "0.5", features = ["util"] }
